# collab_hub

./: Cargo.toml  README.md  errors.txt  errors_menu-rs.txt  index.html
apps/code_editor/: Cargo.toml
apps/code_editor/assets/css/: editor_style.css
apps/code_editor/src/: main.rs
backend/: Cargo.toml  build.rs
backend/src/: main.rs
code_editor/: Cargo.toml
code_editor/assets/css/: prism-dark.css  prism.css
code_editor/assets/js/: prism.js
code_editor/src/: code_editor.rs  code_editor_view.rs  highlighter.rs  main.rs
components_lib/: Cargo.toml
components_lib/src/: lib.rs
components_lib/src/core/: mod.rs  themes.rs
components_lib/src/core/users/: mod.rs
components_lib/src/editor/: mod.rs
components_lib/src/editor/dialogs/: file_dialog.rs  mod.rs
components_lib/src/editor/editor_core/: code_editor_view.rs  cursor.rs  highlighter.rs  mod.rs
components_lib/src/editor/panels/: mod.rs  status_bar.rs  toolbar.rs
components_lib/src/editor/panels/menus/: menu.rs  menu_config.rs  mod.rs
components_lib/src/text_editing/editor/: buffer.rs  editor_view.rs  file_dialog.rs  highlighter.rs  mod.rs  status_bar.rs  toolbar.rs
