[package]
name = "components_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
ropey = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = { workspace = true }