[package]
name = "code_editor"
version = "0.1.0"
authors = ["Bryan Hyland <bryan.hyland32@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
components_lib = { path = "../../components_lib" }
dioxus = { workspace = true }
ropey = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = { workspace = true }

[features]
default = ["web"]
web = ["dioxus/web"]
